--- a/roles/changedetection/molecule/default/verify_stopped.yml
+++ b/roles/changedetection/molecule/default/verify_stopped.yml
@@ -6,25 +6,21 @@
     - name: Include vars
       ansible.builtin.include_vars:
         file: ../../defaults/main.yml
-
     - name: Try and stop and remove changedetection webdriver
       community.docker.docker_container:
-        name: "{{ changedetection_webdriver_container_name }}"
+        name: '{{ changedetection_webdriver_container_name }}'
         state: absent
       register: result_webdriver
-
-    - name: Try and stop and remove changedetection
+    - name: Try and stop and remove changedetection playwright
       community.docker.docker_container:
-        name: "{{ changedetection_playwright_container_name }}"
+        name: '{{ changedetection_playwright_container_name }}'
         state: absent
       register: result_playwright
-
     - name: Try and stop and remove changedetection
       community.docker.docker_container:
-        name: "{{ changedetection_container_name }}"
+        name: '{{ changedetection_container_name }}'
         state: absent
       register: result
-
     - name: Check if changedetection is stopped
       ansible.builtin.assert:
         that:
