--- a/roles/cloudflare_ddns/tasks/main.yml
+++ b/roles/cloudflare_ddns/tasks/main.yml
@@ -3,36 +3,33 @@
   block:
     - name: Check for deprecated API key
       ansible.builtin.fail:
-        msg: "Using a Cloudflare global API key is no longer supported. Please unset cloudflare_ddns_api_key and set cloudflare_ddns_token"
+        msg: Using a Cloudflare global API key is no longer supported. Please unset
+          cloudflare_ddns_api_key and set cloudflare_ddns_token
       when: cloudflare_ddns_api_key is defined
-
     - name: Create cloudflare Dynamic DNS Directories
       ansible.builtin.file:
-        path: "{{ cloudflare_ddns_data_directory }}"
+        path: '{{ cloudflare_ddns_data_directory }}'
         state: directory
-
     - name: Template Cloudflare Dynamic DNS config.yml with scoped token
       ansible.builtin.template:
         src: config.yml
-        dest: "{{ cloudflare_ddns_data_directory }}/config.yml"
-      register: template_files_result
-
+        dest: '{{ cloudflare_ddns_data_directory }}/config.yml'
+      register: cloudflare_ddns_template_files_result
     - name: Cloudflare Dynamic DNS Container
       community.docker.docker_container:
-        name: "{{ cloudflare_ddns_container_name }}"
+        name: '{{ cloudflare_ddns_container_name }}'
         image: joshava/cloudflare-ddns:latest
         pull: true
         volumes:
-          - "{{ cloudflare_ddns_data_directory }}/config.yml:/app/config.yaml"
+          - '{{ cloudflare_ddns_data_directory }}/config.yml:/app/config.yaml'
         restart_policy: unless-stopped
-        memory: "{{ cloudflare_ddns_memory }}"
-        recreate: "{{ template_files_result is changed }}"
+        memory: '{{ cloudflare_ddns_memory }}'
+        recreate: '{{ cloudflare_ddns_template_files_result is changed }}'
   when: cloudflare_ddns_enabled is true
-
 - name: Stop Cloudflare DDNS
   block:
     - name: Stop Cloudflare DDNS
       community.docker.docker_container:
-        name: "{{ cloudflare_ddns_container_name }}"
+        name: '{{ cloudflare_ddns_container_name }}'
         state: absent
   when: cloudflare_ddns_enabled is false
