--- a/roles/logging/tasks/main.yml
+++ b/roles/logging/tasks/main.yml
@@ -1,27 +1,25 @@
 ---
 - name: Start logging stack
   block:
-    - name: Enable logging roles
+    - name: Eable logging roles
       ansible.builtin.set_fact:
-        grafana_enabled: true
-        minio_enabled: true
-        loki_enabled: true
-        promtail_enabled: true
+        logging_grafana_enabled: true
+        logging_minio_enabled: true
+        logging_loki_enabled: true
+        logging_promtail_enabled: true
   when: logging_stack_enabled is true
   # vars:
   #   minio_enabled: true
   #   loki_enabled: true
   #   promtail_enabled: true
-
-
 - name: Stop logging stack
   block:
     - name: Disable logging roles
       ansible.builtin.set_fact:
-        grafana_enabled: false
-        minio_enabled: false
-        loki_enabled: false
-        promtail_enabled: false
+        logging_grafana_enabled: false
+        logging_minio_enabled: false
+        logging_loki_enabled: false
+        logging_promtail_enabled: false
   when: logging_stack_enabled is false
   # vars:
   #   minio_enabled: false
