--- a/roles/netbox/molecule/default/verify.yml
+++ b/roles/netbox/molecule/default/verify.yml
@@ -6,37 +6,30 @@
     - name: Include vars
       ansible.builtin.include_vars:
         file: ../../defaults/main.yml
-
     - name: Get Netbox Postgres container state
       community.docker.docker_container_info:
-        name: "{{ netbox_postgres_container_name }}"
+        name: '{{ netbox_postgres_container_name }}'
       register: result_postgres
-
     - name: Get Netbox Redis container state
       community.docker.docker_container_info:
-        name: "{{ netbox_redis_container_name }}"
+        name: '{{ netbox_redis_container_name }}'
       register: result_redis
-
-    - name: Get Netbox Redis container state
+    - name: Get Netbox Redis Cache container state
       community.docker.docker_container_info:
-        name: "{{ netbox_redis_cache_container_name }}"
+        name: '{{ netbox_redis_cache_container_name }}'
       register: result_redis_cache
-
     - name: Get Netbox container state
       community.docker.docker_container_info:
-        name: "{{ netbox_container_name }}"
+        name: '{{ netbox_container_name }}'
       register: result_netbox
-
     - name: Get Netbox Worker container state
       community.docker.docker_container_info:
-        name: "{{ netbox_worker_container_name }}"
+        name: '{{ netbox_worker_container_name }}'
       register: result_worker
-
     - name: Get Netbox Housekeeping container state
       community.docker.docker_container_info:
-        name: "{{ netbox_housekeeping_container_name }}"
+        name: '{{ netbox_housekeeping_container_name }}'
       register: result_housekeeping
-
     - name: Check if Netbox docker containers are running
       ansible.builtin.assert:
         that:
