--- a/roles/traefik/tasks/main.yml
+++ b/roles/traefik/tasks/main.yml
@@ -3,46 +3,45 @@
   block:
     - name: Create Traefik Directories
       ansible.builtin.file:
-        path: "{{ item }}"
+        path: '{{ item }}'
         state: directory
       with_items:
-        - "{{ traefik_data_directory }}"
-        - "{{ traefik_data_directory }}/letsencrypt"
-
+        - '{{ traefik_data_directory }}'
+        - '{{ traefik_data_directory }}/letsencrypt'
     - name: Template Traefik config.toml
       ansible.builtin.template:
         src: traefik.toml
-        dest: "{{ traefik_data_directory }}/traefik.toml"
-      register: template_config
-
+        dest: '{{ traefik_data_directory }}/traefik.toml'
+      register: traefik_template_config
     - name: Traefik Docker Container
       community.docker.docker_container:
-        name: "{{ traefik_container_name }}"
-        image: "{{ traefik_image_name }}:{{ traefik_image_version }}"
+        name: '{{ traefik_container_name }}'
+        image: '{{ traefik_image_name }}:{{ traefik_image_version }}'
         pull: true
         network_mode: host
         volumes:
-          - "{{ traefik_data_directory }}/traefik.toml:/etc/traefik/traefik.toml:ro"
-          - "{{ traefik_data_directory }}/letsencrypt:/letsencrypt:rw"
-          - "/var/run/docker.sock:/var/run/docker.sock:ro"
-        env: "{{ traefik_environment_variables }}"
+          - '{{ traefik_data_directory }}/traefik.toml:/etc/traefik/traefik.toml:ro'
+          - '{{ traefik_data_directory }}/letsencrypt:/letsencrypt:rw'
+          - /var/run/docker.sock:/var/run/docker.sock:ro
+        env: '{{ traefik_environment_variables }}'
         restart_policy: unless-stopped
-        memory: "{{ traefik_memory }}"
-        recreate: "{{ template_config is changed }}"
+        memory: '{{ traefik_memory }}'
+        recreate: '{{ traefik_template_config is changed }}'
         labels:
           homepage.group: Networking
           homepage.name: Traefik
           homepage.icon: traefik
-          homepage.href: "http://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:{{ traefik_port_ui }}"
+          homepage.href: http://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:{{
+            traefik_port_ui }}
           homepage.description: Reverse Proxy
           homepage.widget.type: traefik
-          homepage.widget.url: "http://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:{{ traefik_port_ui }}"
+          homepage.widget.url: http://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:{{
+            traefik_port_ui }}
   when: traefik_enabled is true
-
 - name: Stop Traefik
   block:
     - name: Stop Traefik
       community.docker.docker_container:
-        name: "{{ traefik_container_name }}"
+        name: '{{ traefik_container_name }}'
         state: absent
   when: traefik_enabled is false
