--- a/roles/vaultwarden/molecule/default/verify.yml
+++ b/roles/vaultwarden/molecule/default/verify.yml
@@ -6,17 +6,14 @@
     - name: Include vars
       ansible.builtin.include_vars:
         file: ../../defaults/main.yml
-
     - name: Get container state
       community.docker.docker_container_info:
-        name: "{{ vaultwarden_container_name }}"
+        name: '{{ vaultwarden_container_name }}'
       register: result
-
-    - name: Get container state
+    - name: Get backup container state
       community.docker.docker_container_info:
-        name: "{{ vaultwarden_backup_container_name }}"
+        name: '{{ vaultwarden_backup_container_name }}'
       register: result_backup
-
     - name: Check Vaultwarden is running
       ansible.builtin.assert:
         that:
