--- a/roles/homeassistant/tasks/main.yml
+++ b/roles/homeassistant/tasks/main.yml
@@ -63,7 +63,7 @@
           homepage.group: Home
           homepage.name: HomeAssistant
           homepage.icon: home-assistant
-          homepage.href: "http://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:8123"
+          homepage.href: "https://{{ homeassistant_hostname }}.{{ ansible_nas_domain }}"
           homepage.description: Home Automation
         memory: "{{ homeassistant_memory }}"
 
@@ -105,10 +105,16 @@
           TZ: "{{ ansible_nas_timezone }}"
           ZIGBEE2MQTT_CONFIG_MQTT_SERVER : mqtt://{{ mosquitto_container_name }}
         labels:
+          traefik.enable: "{{ homeassistant_available_externally | string }}"
+          traefik.http.routers.zigbee2mqtt.rule: "Host(`{{ zigbee2mqtt_hostname }}.{{ ansible_nas_domain }}`)"
+          traefik.http.routers.zigbee2mqtt.tls.certresolver: "letsencrypt"
+          traefik.http.routers.zigbee2mqtt.tls.domains[0].main: "{{ ansible_nas_domain }}"
+          traefik.http.routers.zigbee2mqtt.tls.domains[0].sans: "*.{{ ansible_nas_domain }}"
+          traefik.http.services.zigbee2mqtt.loadbalancer.server.port: "8080"
           homepage.group: Home
           homepage.name: Zigbee2MQTT
           homepage.icon: zigbee2mqtt.png
-          homepage.href: "http://{{ ansible_nas_hostname }}:{{ zigbee2mqtt_port }}"
+          homepage.href: "https://{{ zigbee2mqtt_hostname }}.{{ ansible_nas_domain }}"
           homepage.description: Zigbee2MQTT broker
         memory: "{{ zigbee2mqtt_memory }}"
 
