--- a/roles/seafile/tasks/main.yml
+++ b/roles/seafile/tasks/main.yml
@@ -34,20 +34,19 @@
       ansible.builtin.pause:
         seconds: 30
 
-    - name: Create Seafile Memcached Container
+    - name: Create Seafile Redis Container
       community.docker.docker_container:
         container_default_behavior: no_defaults
-        name: "{{ seafile_memcached_container_name }}"
-        image: "{{ seafile_memcached_image_name }}:{{ seafile_memcached_image_version }}"
+        name: "{{ seafile_redis_container_name }}"
+        image: "{{ seafile_redis_image_name }}:{{ seafile_redis_image_version }}"
         pull: true
-        entrypoint: ["memcached", "-m 256"]
+        command:
+          ['/bin/sh', '-c', 'redis-server --requirepass {{ seafile_redis_password }}']
         networks:
           - name: "{{ seafile_network_name }}"
         network_mode: "{{ seafile_network_name }}"
-        labels:
-          traefik.enable: "false"
         restart_policy: unless-stopped
-        memory: "{{ seafile_memcached_memory }}"
+        memory: "{{ seafile_redis_memory }}"
 
     - name: Create Seafile Docker Container
       community.docker.docker_container:
@@ -62,7 +61,26 @@
         networks:
           - name: "{{ seafile_network_name }}"
         network_mode: "{{ seafile_network_name }}"
-        env: "{{ seafile_optional_env | default({}) | combine(seafile_env) }}"
+        env:
+          CACHE_PROVIDER: redis
+          REDIS_PASSWORD: "{{ seafile_redis_password }}"
+          REDIS_HOST: "{{ seafile_redis_container_name }}"
+          REDIS_PORT: "{{ seafile_redis_port }}"
+          SEAFILE_MYSQL_DB_HOST: "{{ seafile_db_container_name }}"
+          SEAFILE_MYSQL_DB_USER: "{{ seafile_db_user }}"
+          SEAFILE_MYSQL_DB_PASSWORD: "{{ seafile_db_password }}"  # Requested, the value shuold be root's password of MySQL service.
+          SEAFILE_MYSQL_DB_PORT: "{{ seafile_db_port }}"
+          SEAFILE_MYSQL_DB_CCNET_DB_NAME: "ccnet_db"
+          SEAFILE_MYSQL_DB_SEAFILE_DB_NAME: "seafile_db"
+          SEAFILE_MYSQL_DB_SEAHUB_DB_NAME: "seahub_db"
+          INIT_SEAFILE_MYSQL_ROOT_PASSWORD: "{{ seafile_db_root_password }}"
+          SEAFILE_ADMIN_EMAIL: "{{ seafile_admin_email }}" # Specifies Seafile admin user, default is 'me@example.com'.
+          SEAFILE_ADMIN_PASSWORD: "{{ seafile_admin_password }}"     # Specifies Seafile admin password, default is 'asecret'.
+          SEAFILE_SERVER_LETSENCRYPT: "{{ seafile_server_letsencrypt }}"   # Whether to use https or not.
+          SEAFILE_SERVER_HOSTNAME: "{{ seafile_hostname }}.{{ ansible_nas_domain }}" # Specifies your host name if https is enabled.
+          TIME_ZONE: "{{ ansible_nas_timezone }}"
+          JWT_PRIVATE_KEY: "{{ seafile_jwt_key }}"
+          SEAFILE_SERVER_PROTOCOL: "https"
         restart_policy: unless-stopped
         memory: "{{ seafile_memory }}"
         labels:
@@ -75,7 +93,7 @@
           homepage.group: Media
           homepage.name: Seafile
           homepage.icon: seafile
-          homepage.href: "http://{{ ansible_nas_hostname }}:{{ seafile_port }}"
+          homepage.href: "https://{{ seafile_hostname }}.{{ ansible_nas_domain }}"
           homepage.description: File sync and share
   when: seafile_enabled is true
 
@@ -89,8 +107,8 @@
       community.docker.docker_container:
         name: "{{ seafile_db_container_name }}"
         state: absent
-    - name: Stop Seafile Memcached
+    - name: Stop Seafile Redis
       community.docker.docker_container:
-        name: "{{ seafile_memcached_container_name }}"
+        name: "{{ seafile_redis_container_name }}"
         state: absent
   when: seafile_enabled is false
