--- a/roles/searxng/tasks/main.yml
+++ b/roles/searxng/tasks/main.yml
@@ -35,7 +35,7 @@
           - SETGID
           - SETUID
           - DAC_OVERRIDE
-        command: redis-server --save "" --appendonly "no"
+        command: valkey-server --save 30 1 --loglevel warning
         networks:
           - name: "{{ searxng_network_name }}"
         network_mode: "{{ searxng_network_name }}"
@@ -79,7 +79,7 @@
           homepage.name: SearxNG
           homepage.icon: searxng.png
           homepage.description: "Free internet metasearch engine"
-          homepage.href: "http://{{ ansible_nas_hostname }}:{{ searxng_port }}"
+          homepage.href: "https://{{ searxng_hostname }}.{{ ansible_nas_domain }}"
         log_driver: "json-file"
         log_options:
           max-size: "1m"
