Minor changes afer merge

--- a/roles/netdata/tasks/main.yml
+++ b/roles/netdata/tasks/main.yml
@@ -25,8 +25,7 @@
         memory: '{{ netdata_memory }}'
         labels:
           traefik.enable: '{{ netdata_available_externally | string }}'
-          traefik.http.routers.netdata.rule: Host(`{{ netdata_hostname }}.{{ ansible_nas_domain
-            }}`)
+          traefik.http.routers.netdata.rule: Host(`{{ netdata_hostname }}.{{ ansible_nas_domain}}`)
           traefik.http.routers.netdata.tls.certresolver: letsencrypt
           traefik.http.routers.netdata.tls.domains[0].main: '{{ ansible_nas_domain }}'
           traefik.http.routers.netdata.tls.domains[0].sans: '*.{{ ansible_nas_domain }}'
