🔨 Update ansible.cfg

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
 retry_files_enabled = False
+timeout = 60
 
 # fact caching
 gathering = smart
@@ -8,3 +9,5 @@ fact_caching_connection = /tmp/facts_cache
 
 # two hours timeout
 fact_caching_timeout = 7200
+[ssh_connection]
+ssh_args = -C -o ControlMaster=yes -o ControlPersist=60s
